--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -32,6 +32,14 @@ else
            </a>
        </h3>
    </div>
+
+         <div class="alert alert-secondary text-center">
+           <h3>
+               <a asp-action="GenerateLink" asp-controller="UrlShortener">
+                   ساخت اسکریپت
+               </a>
+           </h3>
+       </div>
     
    <table class="table table-bordered table-borderless  table-responsive-md">
               <thead>
