--- a/LinkShortener/Views/Home/AboutUs.cshtml
+++ b/LinkShortener/Views/Home/AboutUs.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>محمدرضا عموری طراح وبسایت مینی لینک .</p>
+<p>
+   این سایت توسط <a href="https://mramoori.ir">محمدرضا عموری</a> و با استفاده از Asp.Net Core و Sql Server 2019 نوشته شده است .
+</p>
