--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@ else
 
          <div class="alert alert-secondary text-center">
            <h3>
-               <a asp-action="GenerateLink" asp-controller="UrlShortener">
+               <a asp-action="AddScript" asp-controller="Script">
                    ساخت اسکریپت
                </a>
            </h3>
