--- a/LinkShortener/Views/Script/AddScript.cshtml
+++ b/LinkShortener/Views/Script/AddScript.cshtml
@@ -21,6 +21,11 @@
                 <input asp-for="Customer" class="form-control" />
                 <span asp-validation-for="Customer" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="ExpireDate" class="control-label"></label>
+                <input asp-for="ExpireDate" class="form-control" />
+                <span asp-validation-for="ExpireDate" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="ایجاد" class="btn btn-success" />
                 <a asp-action="Index" class="btn btn-danger">بازگشت به صفحه اصلی</a>
