--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -30,22 +30,97 @@ else
             <span class="text-info">تاریخ ثبت نام: </span> @User.Identity.GetRegisterdate()
    </h6>
 
+
+           <div class="alert alert-secondary text-center">
+           <h3>
+               <a asp-action="AddScript" asp-controller="Script" class="btn btn-primary">
+                   ساخت اسکریپت
+               </a>
+           </h3>
+       </div>
+
+
    <div class="alert alert-secondary text-center">
        <h3>
-           <a asp-action="GenerateLink" asp-controller="UrlShortener">
+           <a asp-action="GenerateLink" asp-controller="UrlShortener" class="btn btn-primary">
                ساخت لینک کوتاه
            </a>
        </h3>
    </div>
 
-         <div class="alert alert-secondary text-center">
-           <h3>
-               <a asp-action="AddScript" asp-controller="Script">
-                   ساخت اسکریپت
-               </a>
-           </h3>
-       </div>
-    
+   <hr />
+
+   <p class="text-info">اسکریپت ها</p>
+
+
+    <table class="table table-bordered table-borderless table-striped text-center table-responsive-md">
+              <thead>
+               <tr>
+                   <th class="border">ردیف</th>
+                   <th class="border">نام مشتری</th>
+                   <th class="border">لینک اسکریپت</th>
+                   <th class="border">تاریخ ایجاد</th>
+                   <th class="border">تاریخ انقضا</th>
+                   <th class="border">آپدیت</th>
+                   <th class="border">دستورات</th>
+               </tr>
+           </thead>
+       
+       @foreach (var item in Model.Scripts)
+        {
+            
+
+           <tr class="border">
+               <td class="border">
+                 @b
+               </td>
+               <td class="border">
+                  @if (item.CreateDate >= item.ExpireDate)
+                    {
+                   <p class="alert alert-danger">
+                        @item.Customer 
+                        (منقضی شده است)
+                  </p> 
+                 
+                    }
+                    else
+                    {
+                        <p>
+                        @item.Customer
+                  </p> 
+                    }
+               </td>
+               <td class="border">
+                   <a href="@(ViewData["urlSite"]+item.ShortLink)">
+                        @(ViewData["urlSite"] + item.ShortLink)
+                  </a>
+               </td>
+               <td class="border">
+                   @item.CreateDate.ToString("yyyy/MM/dd")
+               </td>
+               <td class="border">
+                   @item.ExpireDate.ToString("yyyy/MM/dd")
+               </td>
+               <td class="border">
+                   @item.Visit
+               </td>
+               <td class="border">
+                   <a asp-action="Delete" asp-controller="Link" asp-route-id="@item.Customer" class="btn btn-danger">حذف</a>
+                   <a asp-action="Update" asp-controller="Link" asp-route-id="@item.Customer" class="btn btn-warning">ویرایش</a>
+               </td>
+           </tr>
+           b += 1;
+       }
+   </table>
+
+   
+
+  @if (Model.ShortUrls.Any())
+    {
+        <hr />
+
+         <p class="text-info">لینک های کوتاه</p>
+
    <table class="table table-bordered table-borderless  table-responsive-md">
               <thead>
                <tr>
@@ -90,53 +165,9 @@ else
            a += 1;
        }
    </table>
+    }
 
-   <hr />
-
-   <table class="table table-bordered table-borderless  table-responsive-md">
-              <thead>
-               <tr>
-                   <th class="border">ردیف</th>
-                   <th class="border">نام مشتری</th>
-                   <th class="border">لینک اسکریپت</th>
-                   <th class="border">تاریخ ایجاد</th>
-                   <th class="border">بازدید</th>
-                   <th class="border">دستورات</th>
-               </tr>
-           </thead>
-       
-       @foreach (var item in Model.Scripts)
-        {
-            
-
-           <tr class="border">
-               <td class="border">
-                 @b
-               </td>
-               <td class="border">
-                  <p>
-                        @item.Customer
-                  </p> 
-               </td>
-               <td class="border">
-                   <a href="@(ViewData["urlSite"]+item.ShortLink)">
-                        @(ViewData["urlSite"] + item.ShortLink)
-                  </a>
-               </td>
-               <td class="border">
-                   @item.CreateDate.ToString("yyyy/MM/dd")
-               </td>
-               <td class="border">
-                   @item.Visit
-               </td>
-               <td class="border">
-                   <a asp-action="Delete" asp-controller="Link" asp-route-id="@item.Customer" class="btn btn-danger">حذف</a>
-                   <a asp-action="Update" asp-controller="Link" asp-route-id="@item.Customer" class="btn btn-warning">ویرایش</a>
-               </td>
-           </tr>
-           b += 1;
-       }
-   </table>
+  
 
 
 }
