--- a/LinkShortener/Views/Shared/_Layout.cshtml
+++ b/LinkShortener/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap-rtl.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
+    @RenderSection("styles", required: false)
 </head>
 
 <body class="rtl">
