--- a/LinkShortener/Views/Script/AddScript.cshtml
+++ b/LinkShortener/Views/Script/AddScript.cshtml
@@ -22,9 +22,9 @@
                 <span asp-validation-for="Customer" class="text-danger"></span>
             </div>
              <div class="form-group">
-                <label asp-for="ExpireDate" class="control-label"></label>
-                <input asp-for="ExpireDate" class="form-control" />
-                <span asp-validation-for="ExpireDate" class="text-danger"></span>
+                <label asp-for="IsActive" class="control-label"></label>
+                <input asp-for="IsActive" class="form-control" />
+                <span asp-validation-for="IsActive" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="ایجاد" class="btn btn-success" />
