--- a/LinkShortener/Views/Script/UpdateScript.cshtml
+++ b/LinkShortener/Views/Script/UpdateScript.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Customer" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IsActive" class="control-label"></label>
+                <input asp-for="IsActive" class="form-control" />
+                <span asp-validation-for="IsActive" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="ویرایش" class="btn btn-warning" />
                 <a asp-action="Index" asp-controller="Home" class="btn btn-danger">بازگشت</a>
             </div>
