Update Script Success

--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@ else
                <td class="border">
                  @if (item.IsActive)
                     {
-                        <p>فعال</p>
+                        <p class="text-success">فعال</p>
                     }
                     else
                     {
