--- a/LinkShortener/Views/Script/AddScript.cshtml
+++ b/LinkShortener/Views/Script/AddScript.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="ایجاد" class="btn btn-success" />
-                <a asp-action="Index" class="btn btn-danger">بازگشت به صفحه اصلی</a>
+                <a asp-action="Index" asp-controller="Home" class="btn btn-danger">بازگشت به صفحه اصلی</a>
             </div>
         </form>
     </div>
