--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@ else
                    @item.Visit
                </td>
                <td class="border">
-                   <a asp-action="Delete" asp-controller="Link" asp-route-id="@item.ScriptId" class="btn btn-danger">حذف</a>
+                   <a asp-action="DeleteScript" asp-controller="Script" asp-route-id="@item.ScriptId" class="btn btn-danger">حذف</a>
                    <a asp-action="UpdateScript" asp-controller="Script" asp-route-id="@item.ScriptId" class="btn btn-warning">ویرایش</a>
                </td>
            </tr>
