Update Ui && User Model

--- a/LinkShortener/Views/Account/Register.cshtml
+++ b/LinkShortener/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">بازگشت</a>
+    <a asp-action="Index" asp-controller="Home" class="btn btn-warning">بازگشت</a>
 </div>
 
 @section Scripts {
