--- a/LinkShortener/Views/Home/AboutUs.cshtml
+++ b/LinkShortener/Views/Home/AboutUs.cshtml
@@ -6,3 +6,7 @@
 <p>
    این سایت توسط <a href="https://mramoori.ir">محمدرضا عموری</a> و با استفاده از Asp.Net Core و Sql Server 2019 نوشته شده است .
 </p>
+<hr />
+<p>
+    این سایت کوتاه کننده لینک است و برنامه نویس آن هیچ تعهدی در قبال استفاده کاربران ندارد .
+</p>
