--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@ else
               <thead>
                <tr>
                    <th class="border">ردیف</th>
-                   <th class="border">نام مشتری</th>
+                   <th class="border">نام</th>
                    <th class="border">لینک اسکریپت</th>
                    <th class="border">تاریخ ایجاد</th>
                    <th class="border">وضعیت</th>
