--- a/LinkShortener/Views/Account/Login.cshtml
+++ b/LinkShortener/Views/Account/Login.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Register" asp-controller="Account">ثبت نام</a>
+    <a asp-action="Register" asp-controller="Account" class="btn btn-primary">ثبت نام</a>
 </div>
 
 @section Scripts {
