--- a/LinkShortener/Views/Script/AddScript.cshtml
+++ b/LinkShortener/Views/Script/AddScript.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="script" class="control-label"></label>
-                <input asp-for="script" class="form-control" />
+                <textarea rows="5" asp-for="script" class="form-control"></textarea>
                 <span asp-validation-for="script" class="text-danger"></span>
             </div>
             <div class="form-group">
