--- a/LinkShortener/Views/Script/UpdateScript.cshtml
+++ b/LinkShortener/Views/Script/UpdateScript.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ScriptId" />
             <div class="form-group">
                 <label asp-for="script" class="control-label"></label>
-                <input asp-for="script" class="form-control" />
+                <textarea rows="5" asp-for="script" class="form-control"> </textarea>
                 <span asp-validation-for="script" class="text-danger"></span>
             </div>
             <div class="form-group">
