--- a/LinkShortener/Pages/Admin/ManageUsers/Create.cshtml
+++ b/LinkShortener/Pages/Admin/ManageUsers/Create.cshtml
@@ -37,6 +37,11 @@
                     <input class="form-check-input" asp-for="Users.IsAdmin" /> @Html.DisplayNameFor(model => model.Users.IsAdmin)
                 </label>
             </div>
+              <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Users.IsActive" /> @Html.DisplayNameFor(model => model.Users.IsActive)
+                </label>
+            </div>
             <div class="form-group">
                 <input type="submit" value="افزودن" class="btn btn-success" />
             </div>
@@ -45,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">بازگشت</a>
+    <a asp-page="Index" class="btn btn-primary">بازگشت</a>
 </div>
 
 @section Scripts {
