--- a/LinkShortener/Pages/Admin/ManageUsers/Delete.cshtml
+++ b/LinkShortener/Pages/Admin/ManageUsers/Delete.cshtml
@@ -24,12 +24,6 @@
             @Html.DisplayFor(model => model.Users.Password)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Users.RegisterDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Users.RegisterDate)
-        </dd>
-        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Users.IsAdmin)
         </dt>
         <dd class="col-sm-10">
@@ -40,6 +34,6 @@
     <form method="post">
         <input type="hidden" asp-for="Users.UserId" />
         <input type="submit" value="حذف" class="btn btn-danger" /> |
-        <a asp-page="./Index">بازگشت</a>
+        <a asp-page="./Index" class="btn btn-primary">بازگشت</a>
     </form>
 </div>
