--- a/LinkShortener/Pages/Admin/ManageUsers/Edit.cshtml
+++ b/LinkShortener/Pages/Admin/ManageUsers/Edit.cshtml
@@ -33,14 +33,14 @@
                 <input asp-for="Users.NumberPhone" class="form-control" />
                 <span asp-validation-for="Users.NumberPhone" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Users.RegisterDate" class="control-label"></label>
-                <input asp-for="Users.RegisterDate" class="form-control" />
-                <span asp-validation-for="Users.RegisterDate" class="text-danger"></span>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Users.IsAdmin" /> @Html.DisplayNameFor(model => model.Users.IsAdmin)
+                </label>
+            </div>
+                        <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Users.IsActive" /> @Html.DisplayNameFor(model => model.Users.IsActive)
                 </label>
             </div>
             <div class="form-group">
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">بازگشت</a>
+    <a asp-page="./Index" class="btn btn-primary">بازگشت</a>
 </div>
 
 @section Scripts {
