--- a/LinkShortener/Views/Shared/_Layout.cshtml
+++ b/LinkShortener/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-light" href="/Admin/ManageUsers">مدیریت کاربران</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" href="/Admin/ManageScripts">مدیریت اسکریپت ها</a>
+                                </li>
                         }
                     </ul>
                 </div>
