Add Number Phone To Script

--- a/LinkShortener/Pages/Admin/ManageScripts/Index.cshtml
+++ b/LinkShortener/Pages/Admin/ManageScripts/Index.cshtml
@@ -15,7 +15,7 @@
                 کاربر
             </th>
             <th class="border">
-                @Html.DisplayNameFor(model => model.Scripts[0].CreateDate)
+               تاریخ ایجاد
             </th>
             <th class="border">
                 @Html.DisplayNameFor(model => model.Scripts[0].IsActive)
