--- a/LinkShortener/Views/Script/DeleteScript.cshtml
+++ b/LinkShortener/Views/Script/DeleteScript.cshtml
@@ -16,6 +16,12 @@
             @Html.DisplayFor(model => model.Customer)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NumberPhone)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NumberPhone)
+        </dd>
+        <dt class = "col-sm-2">
             تاریخ ایجاد
         </dt>
         <dd class = "col-sm-10">
