--- a/LinkShortener/Views/Script/UpdateScript.cshtml
+++ b/LinkShortener/Views/Script/UpdateScript.cshtml
@@ -28,6 +28,11 @@
                 <textarea rows="5" asp-for="script" class="form-control"> </textarea>
                 <span asp-validation-for="script" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="CreateDate" class="control-label"></label>
+                <textarea rows="5" asp-for="CreateDate" class="form-control"> </textarea>
+                <span asp-validation-for="CreateDate" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
                 <input asp-for="IsActive" class="form-control" />
