--- a/LinkShortener/Views/Script/UpdateScript.cshtml
+++ b/LinkShortener/Views/Script/UpdateScript.cshtml
@@ -30,7 +30,7 @@
             </div>
              <div class="form-group">
                 <label asp-for="CreateDate" class="control-label"></label>
-                <textarea rows="5" asp-for="CreateDate" class="form-control"> </textarea>
+                <input asp-for="CreateDate" class="form-control" />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
             <div class="form-group">
