--- a/LinkShortener/Views/Script/AddScript.cshtml
+++ b/LinkShortener/Views/Script/AddScript.cshtml
@@ -26,6 +26,11 @@
                 <textarea rows="5" asp-for="script" class="form-control"></textarea>
                 <span asp-validation-for="script" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="ExpiryDateNum" class="control-label"></label>
+                <input asp-for="ExpiryDateNum" class="form-control" />
+                <span asp-validation-for="ExpiryDateNum" class="text-danger"></span>
+            </div>
              <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
                 <input asp-for="IsActive" class="form-control" />
