--- a/LinkShortener/Views/Script/UpdateScript.cshtml
+++ b/LinkShortener/Views/Script/UpdateScript.cshtml
@@ -14,6 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ScriptId" />
             <input type="hidden" asp-for="Visit" />
+
             <div class="form-group">
                 <label asp-for="Customer" class="control-label"></label>
                 <input asp-for="Customer" class="form-control" />
@@ -29,10 +30,15 @@
                 <textarea rows="5" asp-for="script" class="form-control"> </textarea>
                 <span asp-validation-for="script" class="text-danger"></span>
             </div>
-             <div class="form-group">
+            <div class="form-group">
                 <label asp-for="CreateDate" class="control-label"></label>
                 <input asp-for="CreateDate" class="form-control" />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="ExpiryDateNum" class="control-label"></label>
+                <input asp-for="ExpiryDateNum" class="form-control" />
+                <span asp-validation-for="ExpiryDateNum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
