--- a/LinkShortener/Views/Script/QR.cshtml
+++ b/LinkShortener/Views/Script/QR.cshtml
@@ -16,7 +16,7 @@ div.container {
 </style>
 }
 
-@if (!string.IsNullOrEmpty(ViewBag.QrCode))
+@if (!string.IsNullOrEmpty(ViewBag.qr))
 {
     
         
@@ -24,7 +24,7 @@ div.container {
              <div class="container">
                 <p>عکس QR CODE مشتری @ViewBag.Name</p>
             </div>
-        <img src="@ViewBag.QrCode" alt="Qr">
+        <img src="@ViewBag.qr" alt="Qr">
             <br/>
             <a href="/" class="btn btn-dark m-3">بازگشت</a>
         <br />
